--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   geolocator: ^13.0.1
   go_router: ^14.2.7
   google_nav_bar: ^5.0.6
-  http: ^0.13.4
+  http: ^0.13.5
   intl: ^0.19.0
   latlong2: ^0.8.0
   local_auth: ^2.1.6
@@ -36,6 +36,7 @@ dependencies:
   equatable: ^2.0.5
   firebase_messaging: ^15.1.4
   flutter_local_notifications: ^18.0.0
+  geocoding: ^3.0.0
   
 dev_dependencies:
   flutter_test:
