--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_messaging: ^15.1.4
   flutter_local_notifications: ^18.0.0
   geocoding: ^3.0.0
+  image_picker: ^0.8.7+3
+  firebase_storage: ^12.3.6
   
 dev_dependencies:
   flutter_test:
