--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
 
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: 'assets/logos.png'
+  min_sdk_android: 21
+
 flutter:
 
   uses-material-design: true
