se pueden guardar datos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geocoding: ^3.0.0
   image_picker: ^0.8.7+3
   firebase_storage: ^12.3.6
+  flutter_secure_storage: ^9.2.2
   
 dev_dependencies:
   flutter_test:
